# LabDataX

./: .gitignore  pyproject.toml
Source/jinja-admint/app/: views.py
Source/jinja-admint/app/static/assets/css/: style.css
Source/jinja-admint/app/templates/includes/: sidebar.html
Source/pgutils/: db_init.sql  docker-compose.yaml  docker_cmd.sh
